Events Signup Form Heading On Mobile - styling class correction

--- a/docroot/sites/all/themes/ambitious/sass/content.scss
+++ b/docroot/sites/all/themes/ambitious/sass/content.scss
@@ -1068,7 +1068,7 @@
 
 //signup overlay columns
 // 2 columns
-.signup-columns, .my-voice-columns, community-columns{
+.signup-columns, .my-voice-columns, .community-columns{
 	@extend %clearfix;
 	/* article column styles */
 	.col {
